--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
 
         <!-- Section 2 -->
         <div
-          class="relative  section-2 lg:w-[40%] md:w-[40%] h-[100vh] border border-black sm:w-[100%] bg-white"
+          class="relative  section-2 lg:w-[40%] md:w-[40%] h-[100vh]  sm:w-[100%] bg-white"
         >
 
         
