--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <title>Document</title>
@@ -17,7 +17,7 @@
       >
       
         <!-- Section 1 -->
-        <div class="flex section-1 lg:w-[35%] md:w-[35%] sm:w-[100%] h-[100vh]">
+        <div class="flex section-1 cursor-pointer lg:w-[35%] md:w-[35%] sm:w-[100%] h-[100vh]">
           <div class="flex relative w-[20%] bg-white justify-center py-10">
             <div class="absolute bottom-10">
               <img class="h-5" src="/images/power-off.png" />
@@ -665,7 +665,7 @@
 
         <!-- Section 2 -->
         <div
-          class="relative  section-2 lg:w-[40%] md:w-[40%] h-[100vh]  sm:w-[100%] bg-white"
+          class="relative  cursor-pointer  section-2 lg:w-[40%] md:w-[40%] h-[100vh]  sm:w-[100%] bg-white"
         >
 
         
@@ -999,7 +999,7 @@
         </div>
         <!-- Section 3 -->
         <div
-          class="section-3 lg:w-[25%] md:w-[25%] h-[100vh] sm:w-[100%] bg-white border border-gray-300"
+          class="section-3 cursor-pointer  lg:w-[25%] md:w-[25%] h-[100vh] sm:w-[100%] bg-white border border-gray-300"
         >
           <div class="h-[18vh] border-b border-gray-300 p-4">
             <img
