--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                   </div>
                   <input
                     placeholder="Search"
-                    class="input h-10 w-full rounded-tr-2xl rounded-br-2xl outline-none border-none"
+                    class="input  w-full rounded-tr-2xl rounded-br-2xl outline-none border-none"
                     type="text"
                   />
                 </div>
